<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/dialog_change_password"
                android:textSize="@dimen/size_20"
                android:textStyle="bold"
                android:textColor="@color/black_33"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/old_password"
                android:textSize="@dimen/size_17" />


                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:padding="10dp"
                    android:inputType="textVisiblePassword"
                    android:digits="@string/rule_password_lowercase"
                    android:background="@drawable/shape_button_white_full"
                    android:textSize="14sp"
                    android:maxLength="5" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/new_password"
                android:textSize="@dimen/size_17" />



                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:padding="10dp"
                    android:inputType="textVisiblePassword"
                    android:digits="@string/rule_password_lowercase"
                    android:background="@drawable/shape_button_white_full"
                    android:textSize="@dimen/size_14"
                    android:maxLength="5"
                    android:hint="@string/tips_password"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/new_password_conform"
                android:textSize="@dimen/size_17" />



                <EditText
                    android:id="@+id/et_new_password_conform"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:padding="10dp"
                    android:inputType="textVisiblePassword"
                    android:digits="@string/rule_password_lowercase"
                    android:background="@drawable/shape_button_white_full"
                    android:textSize="14sp"
                    android:maxLength="5" />





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight=".5"
                android:stateListAnimator="@null"
                android:background="@drawable/shape_button_white_full"
                android:text="@string/dialog_cancel"
                android:textSize="@dimen/size_14"
                android:textColor="@color/black_33"/>

            <Button
                android:id="@+id/bt_conform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight=".5"
                android:stateListAnimator="@null"
                android:background="@drawable/shape_switch_bg_green"
                android:text="@string/dialog_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/size_14"/>

        </LinearLayout>

    </LinearLayout>
</layout>